--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,6 @@
 REACT_APP_APPWRITE_ENDPOINT=https://appwrite.example.com/v1
 REACT_APP_APPWRITE_PROJECT=5df5acd0d48c2
 REACT_APP_HOSTNAME=http://localhost:3000
+
+REACT_APP_FOLDERS_COLLECTION_ID=
+REACT_APP_FILES_COLLECTION_ID=
